# spar_llm_trajectories_interp

./: 10_ab_multitokentransplant.html  2024-07-31_17-32-51_agnes_story.jsonl  README.md  example.py  first-try.ipynb  promptsV3.csv  pyproject.toml
gemma9b_results/: latest_neutral10_generation.jsonl  latest_neutral15_generation.jsonl  latest_neutral20_generation.jsonl  latest_neutral25_generation.jsonl  latest_neutral30_generation.jsonl  latest_neutral35_generation.jsonl  latest_neutral3_generation.jsonl  latest_neutral40_generation.jsonl  latest_neutral45_generation.jsonl  latest_neutral4_generation.jsonl  latest_neutral50_generation.jsonl  latest_neutral5_generation.jsonl  latest_neutral6_generation.jsonl
gemma_results/: 2024-08-21_17-44-34_neutral_generation.jsonl  2024-08-21_17-44-34_orig_generation.jsonl  2024-08-21_18-38-00_transferred_generation.jsonl  latest_neutral_generation.jsonl  latest_neutral_generation_V2.jsonl  latest_orig_generation copy.jsonl  latest_orig_generation.jsonl  latest_orig_generation_V3.jsonl  latest_transferred_generation copy.jsonl  latest_transferred_generation.jsonl  latest_transferred_generation_2token.jsonl  latest_transferred_generation_FIXING.jsonl  latest_transferred_generation_V2.jsonl  latest_transferred_generation_V3.jsonl
notebooks/: 01_la_first_experiments.ipynb  02_ab_playground.ipynb  03_la_quantization.ipynb  04_ab_attention_visualizer.ipynb  05_ab_takertest.ipynb  06_la_one_scenario_repeated.ipynb  07_ab_mlp_vs_attn.ipynb  07_la_rerun_multitoken_transplant.ipynb  08_ab_multipletokentransplant.ipynb  08_la_activation_transfer_other_scenarios.ipynb  09_ab_transfercharactertesting.ipynb  10_ab_multitokentransplant.ipynb  11_ab_taker_attn_vis.ipynb  12_ab_newlinetransfercomparison.ipynb  14.1_ab_gemma_9b_generations.ipynb  14.2_ab_gemma_9b_generations.py  14_ab_gemma9b_genscript.py  14_ab_gemma_generations.ipynb  16_ab_masK_attention.ipynb  16_np_masK_attention.ipynb  17_ab_Bart_attnmask.ipynb  18_ab_trainer.ipynb  19_ab_generationmask.ipynb  19_np_generationmask.ipynb  20_ab_fulltrainloop.ipynb  example_taker.ipynb
notes/: 2024-08-29-LA_activation_transfer_long_topics.md
results/: 2024-07-07_08-38-02.json  (+29 more)
src/: example.py
(+13 files in other folders)
