[tool.poetry]
name = "interp"
version = "0.1.0"
description = ""
authors = ["Nicky Pochinkov <work@nicky.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformer-lens = "^2.1.0"
ipykernel = "^6.29.5"
cv = "^1.0.0"
pip = "^24.1.2"
bitsandbytes = "^0.43.1"
circuitsvis = "^1.43.2"
sentence-transformers = "^3.0.1"
plotly = "^5.23.0"
transformers = "^4.42.4"
torch = "^2.3.1"
accelerate = "^0.32.1"
nbformat = "^5.10.4"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
