[tool.poetry]
name = "interp"
version = "0.1.0"
description = ""
authors = ["Nicky Pochinkov <work@nicky.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformer-lens = "^2.1.0"
ipykernel = "^6.29.5"
cv = "^1.0.0"
pip = "^24.1.2"
bitsandbytes = "^0.43.1"
sentence-transformers = "^3.0.1"
plotly = "^5.23.0"
transformers = "^4.42.4"
accelerate = "0.31.0"
nbformat = "^5.10.4"
seaborn = "^0.13.2"
circuitsvis = "^1.43.2"
hqq = "^0.1.8"
taker = "^1.0.5"
phate = "^1.0.11"
umap-learn = "^0.5.6"
runipy = "^0.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
